--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,7 @@
-{% extends "base.html" %}
-
-{% block content %}
-<h1>Hello, {{ user.username }}!</h1>
+{% extends "base.html" %} {% block content %}
+<h1>Hello, {{ current_user.username }}!</h1>
 {% for post in posts%}
 <div>
-    <p>{{ post.author.username }} says <b>{{ post.body }}</b></p>
+  <p>{{ post.author.username }} says <b>{{ post.body }}</b></p>
 </div>
-{% endfor %}
-{% endblock %}
+{% endfor %} {% endblock %}
