adding pagination, forms to create post

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -15,9 +15,19 @@
 </table>
 {% if user == current_user %}
 <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
+{% elif not current_user.is_following(user) %}
+<p><a href="{{ url_for('follow', username=user.username) }}">Follow</a></p>
+{% else %}
+<p><a href="{{ url_for('unfollow', username=user.username) }}">Unfollow</a></p>
 {% endif %}
 <hr>
 {% for post in posts %}
 {% include '_post.html' %}
 {% endfor %}
+{% if prev_url %}
+<a href="{{ prev_url }}">Newer posts</a>
+{% endif %}
+{% if next_url %}
+<a href="{{ next_url }}">Older posts</a>
+{% endif %}
 {% endblock %}
